issues with about paragraph not wrapping around image

--- a/style.css
+++ b/style.css
@@ -20,31 +20,48 @@ body {
     background-image: url(./assets/images/Spiral-Labyrinth-2015053027.svg);
 }
 
-#about_img {
-    max-width: 350px;
-    max-height: 350px;
-}
-.container {
-    /* padding-top: 50px; */
+
+#sticky-footer {
+    background-color: skyblue;
+
 }
 
-/* div .col img {
-    max-width: 50%;
-    float: left;
-    padding-right: 15px;
-} */
+#portfolio_col {
+    margin-top: 120px;
+    margin-bottom: 120px;
+    background-color: aquamarine;
+}
+
+#portfolio_col img {
+    padding: 20px;
+    border-style: solid;
+    
+}
+
+#about_col {
+    margin-top: 120px;
+    margin-bottom: 120px;
+    background-color: aquamarine;
+}
+
+#contact_col {
+    margin-top: 120px;
+    margin-bottom: 120px;
+    background-color: aquamarine;
+}
+
 
 div .col-md-6 {
     padding: 15px;
 }
 
-div .col-md-6 p {
+/* div .col-md-6 h3 {
     position: absolute;
     left: 20%;
     bottom: 20%;
     text-align: center;
     font-size: xx-large;
     font-weight: bolder;
-}
+} */
 
 
